Performance: getChars bulk-copy hashing replaces reflection-based approach
Replaced reflective Field access to String internals with public API
String.getChars() into a ThreadLocal char[] buffer. getChars() is
SIMD-optimized and avoids charAt()'s per-character coder check.

No reflection, no VarHandle, no --add-opens needed. Works on all JDKs.

CaseInsensitiveMap benchmark (100K entries):
  PUT:            135 → 65-71 ns/op  (-48-52%)
  GET:            230 → 58-69 ns/op  (-70-75%)
  MIXED-CASE GET: 302 → 93-97 ns/op (-68%)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>